<resources>
    <string name="app_name">Hi-Tech-Controls</string>
    <string name="hi_tech_controls">Hi-Tech-Controls</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email_hint" />
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="your_service_in_your_hand">Your Service in Your Hand</string>
    <string name="view_client_details">View Client Details</string>
    <string name="recent_discoveries">Recent Discoveries</string>
    <string name="view_clients_details">View Clients\nDetail</string>
    <string name="add_client_details">Add Clients\nDetail</string>
    <string name="find_a_client_details">Find a Client Details</string>
    <string name="in_progress">In Progress</string>
    <string name="search">Search</string>
    <string name="_2001">2001</string>
    <string name="usernameview">username</string>
    <string name="show_password">Show Password</string>



    <!--    all hints-->
    <string name="hintNumber"><font size="14">Enter number</font></string>
    <string name="hintName"><font size="14">Enter name</font></string>
    <string name="hintDate"><font size="14">Select date</font></string>
    <string name="hintRate"><font size="14">Enter feq. rate</font></string>
    <string name="hintValue"><font size="14">Enter value</font></string>
    <string name="hintRemark"><font size="14">Write a remarks</font></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>