<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fillViewport="true">

    <!-- Main layout container -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UselessParent">


            <RelativeLayout
                android:id="@+id/firstLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="Client Id"
                    android:textColor="@color/blue"
                    android:textSize="25sp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/poppins_regular"
                    android:text="2001"
                    android:textColor="@color/blue"
                    android:textSize="25sp"
                    tools:ignore="HardcodedText" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5sp"
                    android:fontFamily="@font/poppins_sembold"
                    android:text="Inward client details "
                    android:textColor="@color/blue"
                    android:textSize="22sp"
                    tools:ignore="HardcodedText" />
                <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->

                <ScrollView
                    android:id="@+id/scrollView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="NestedScrolling">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="2sp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins_medium"
                                android:text="Client Name: "
                                android:textColor="@color/black"
                                android:textSize="19sp"
                                tools:ignore="HardcodedText,TooDeepLayout" />

                            <EditText
                                android:id="@+id/enterName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:backgroundTint="@color/grey"
                                android:ellipsize="start"
                                android:ems="10"
                                android:fontFamily="@font/poppins_regular"
                                android:gravity="center"
                                android:hint="@string/hintName"
                                android:importantForAutofill="no"
                                android:inputType="textPersonName"
                                android:textColor="@color/black"
                                android:textColorHint="@color/grey"
                                tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="2sp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins_medium"
                                android:text="Client Number: "
                                android:textColor="@color/black"
                                android:textSize="19sp"
                                tools:ignore="HardcodedText" />

                            <EditText
                                android:id="@+id/enterNumber"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:backgroundTint="@color/grey"
                                android:ellipsize="start"
                                android:ems="10"
                                android:fontFamily="@font/poppins_regular"
                                android:gravity="center"
                                android:hint="@string/hintNumber"
                                android:importantForAutofill="no"
                                android:inputType="date"
                                android:textColor="@color/black"
                                android:textColorHint="@color/grey"
                                tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,TextFields" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="2sp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins_medium"
                                android:text="GP Number: "
                                android:textColor="@color/black"
                                android:textSize="19sp"
                                tools:ignore="HardcodedText" />

                            <EditText
                                android:id="@+id/enterGPNumber"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:backgroundTint="@color/grey"
                                android:ellipsize="start"
                                android:ems="10"
                                android:fontFamily="@font/poppins_regular"
                                android:gravity="center"
                                android:hint="@string/hintNumber"
                                android:importantForAutofill="no"
                                android:inputType="number"
                                android:textColor="@color/black"
                                android:textColorHint="#757575"
                                tools:ignore="TextFields,TextContrastCheck" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="2sp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins_medium"
                                android:text="GP Date: "
                                android:textColor="@color/black"
                                android:textSize="19sp"
                                tools:ignore="HardcodedText" />

                            <EditText
                                android:id="@+id/dateTextField"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:backgroundTint="@color/grey"
                                android:drawableStart="@drawable/date_icon"
                                android:drawablePadding="20dp"
                                android:ellipsize="start"
                                android:ems="10"
                                android:focusable="false"
                                android:fontFamily="@font/poppins_regular"
                                android:gravity="center"
                                android:hint="@string/hintDate"
                                android:importantForAutofill="no"
                                android:textColor="@color/black"
                                android:textColorHint="@color/grey"
                                tools:ignore="TextContrastCheck,TextFields" />


                            <!--                                <EditText-->
                            <!--                                    android:id="@+id/enterGPdate"-->
                            <!--                                    android:layout_width="wrap_content"-->
                            <!--                                    android:layout_height="wrap_content"-->
                            <!--                                    android:backgroundTint="@color/grey"-->
                            <!--                                    android:ellipsize="start"-->
                            <!--                                    android:ems="10"-->
                            <!--                                    android:fontFamily="@font/poppins_regular"-->
                            <!--                                    android:gravity="center"-->
                            <!--                                    android:hint="@string/hintDate"-->
                            <!--                                    android:importantForAutofill="no"-->
                            <!--                                    android:inputType="date"-->
                            <!--                                    android:textColor="@color/black"-->
                            <!--                                    android:textColorHint="@color/grey"-->
                            <!--                                    tools:ignore="TextContrastCheck" />-->

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="2sp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins_medium"
                                android:text="Make Name: "
                                android:textColor="@color/black"
                                android:textSize="19sp"
                                tools:ignore="HardcodedText" />

                            <EditText
                                android:id="@+id/enterMakeName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:backgroundTint="@color/grey"
                                android:ellipsize="start"
                                android:ems="10"
                                android:fontFamily="@font/poppins_regular"
                                android:gravity="center"
                                android:hint="@string/hintName"
                                android:importantForAutofill="no"
                                android:inputType="textPersonName"
                                android:textColor="@color/black"
                                android:textColorHint="@color/grey"
                                tools:ignore="TextContrastCheck" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="2sp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins_medium"
                                android:text="Model Name: "
                                android:textColor="@color/black"
                                android:textSize="19sp"
                                tools:ignore="HardcodedText" />

                            <EditText
                                android:id="@+id/enterModelName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:backgroundTint="@color/grey"
                                android:ellipsize="start"
                                android:ems="10"
                                android:fontFamily="@font/poppins_regular"
                                android:gravity="center"
                                android:hint="@string/hintName"
                                android:importantForAutofill="no"
                                android:inputType="textPersonName"
                                android:textColor="@color/black"
                                android:textColorHint="@color/grey"
                                tools:ignore="TextContrastCheck" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="2sp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins_medium"
                                android:text="Rating:  "
                                android:textColor="@color/black"
                                android:textSize="19sp"
                                tools:ignore="HardcodedText" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins_thin"
                                android:text="HP"
                                android:textColor="@color/black"
                                android:textSize="19sp"
                                tools:ignore="HardcodedText,TextContrastCheck" />

                            <EditText
                                android:id="@+id/enterHPrate"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:backgroundTint="@color/grey"
                                android:ellipsize="start"
                                android:ems="10"
                                android:fontFamily="@font/poppins_regular"
                                android:gravity="center"
                                android:hint="@string/hintNumber"
                                android:importantForAutofill="no"
                                android:inputType="number"
                                android:textColor="@color/black"
                                android:textColorHint="@color/grey"
                                tools:ignore="TextContrastCheck" />


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="2sp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins_medium"
                                android:text="Serial Number:"
                                android:textColor="@color/black"
                                android:textSize="19sp"
                                tools:ignore="HardcodedText" />

                            <EditText
                                android:id="@+id/enterSerialNumber"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:backgroundTint="@color/grey"
                                android:ellipsize="start"
                                android:ems="10"
                                android:fontFamily="@font/poppins_regular"
                                android:gravity="center"
                                android:hint="@string/hintName"
                                android:importantForAutofill="no"
                                android:inputType="textPersonName"
                                android:textColor="@color/black"
                                android:textColorHint="@color/grey"
                                tools:ignore="TextFields,TouchTargetSizeCheck,TextContrastCheck" />
                        </LinearLayout>
                    </LinearLayout>
                </ScrollView>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>